--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ PORT=3000
 DATABASE_URL=postgresql://user:pass@localhost:5432/appdb
 
 JWT_SECRET=dev_jwt_secret_change_in_production_2025
+REFRESH_TOKEN_TTL_DAYS=30
+REFRESH_COOKIE_NAME=refresh_token
 
 FRONTEND_URL=http://localhost:3000
 
@@ -11,4 +13,3 @@ FRONTEND_URL=http://localhost:3000
 SENDER_API_KEY=
 FROM_EMAIL=noreply@example.com
 FROM_NAME=AppName
-
