--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "tslib": "^2.8.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "cookie-parser": "^1.4.6"
   }
 }
